# c-shell

./: .c_env  .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  build.sh  cshell-1.0.0-1-x86_64.pkg.tar.zst  test.txt
.github/workflows/: compile-c-shell.yml
include/: c-shell_cmd.h  csh-shell_cmd.h  history.h  log.h  prompt.h  script_mngr.h  shell.h  users.h  utils.h  vars.h
scripts/: test.csh-lang
src/: c-shell_cmd.c  csh-shell_cmd.c  history.c  log.c  main.c  prompt.c  script_mngr.c  shell.c  users.c  utils.c  vars.c
